Update to Java 11, Eclipse 2021-03 and year 2021